tests/parsing/cmc/errors/120.expected
File "tests/parsing/cmc/errors/120.cmc", line 1, character 28-31:
1 | (define-system sys :output (Int))
                                ^^^
Error while parsing a system output variable declaration,
      read the symbol 'Int',
      but expected a sorted variable of the form "(var sort)", or a closing
      parenthesis.
